crates/lang/tests/ui/trait_def/fail/message_unsafe_invalid.stderr
error: unsafe ink! trait methods are not supported
 --> tests/ui/trait_def/fail/message_unsafe_invalid.rs:6:5
  |
6 |     unsafe fn message_ref(&self);
  |     ^^^^^^
